add swagger for user-segment
